add order total